changes in post

--- a/templates/container.html
+++ b/templates/container.html
@@ -54,6 +54,10 @@
       font-weight:bolder;
       margin-right:15px;
     }
+    .image{
+       background-color:#ffffff;
+
+    }
 </style>
 </div>
 <div class="postcon">
