--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -49,6 +49,10 @@
           background-color:#fafafa;
           color:#000000;
       }
+
+      .post{
+         background-color:#ffffff;
+      }
       .u_posts{
         margin-bottom:50px;
       }
