--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,6 +14,9 @@
      height:90vh;
      }
 
+      .post{
+         background-color:#ffffff;
+      }
         #bio{
           margin-top:6px;
           font-size:15px;
