--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
                <div class="logo">
                    Matrix
                </div>
-               <form method="post">
+               <form method="post" autocomplete="off">
                    {% csrf_token %}
                    <div class="incon">
                          <input type="text" name="username" class="inp" placeholder="Username">
