--- a/templates/comments.html
+++ b/templates/comments.html
@@ -61,13 +61,14 @@
           display:flex;
           flex-direction:row;
           align-items:center;
-          border:.1px solid #dad8d8;
-          padding:5px;
+          border-bottom:.1px solid #dad8d8;
+          padding:10px;
         }
         .commencon > div > span > a{
           width:70%;
           font-size:18px;
           font-weight:bold;
+          font-family:'sui-semi-bold';
           margin-left:20px;
           text-decoration:none;
         }
@@ -85,8 +86,8 @@
             justify-content:space-around;
         }
          .commencon > div > div{
-          width:60px;
-          height:60px;
+          width:50px;
+          height:50px;
           border-radius:50%;
         }
          .commencon > div > div > img{
