--- a/templates/friends.html
+++ b/templates/friends.html
@@ -33,6 +33,8 @@
           border-radius:5px;
           margin-top:2px;
           margin-bottom:2px;
+          transition-property:all;
+          transition:.1s ease;
         }
         .add_b{
           border:none;
@@ -64,18 +66,18 @@
       }
       .req_t{
        margin:10px;
-       font-family: 'Roboto', sans-serif;
+       font-family: 'sui-semi-bold';
        font-size:20px;
        font-weight:bolder;
       }
       .un{
          font-size:20px;
-         font-family: 'Roboto', sans-serif;
+               font-family: 'sui-semi-bold';
       }
       .un_n{
          font-size:16px;
-         font-family: 'Roboto', sans-serif;
-         color:grey;
+         font-family: 'sui-semi-bold';
+         color:#8e8e8e;
       }
       .con{
         overflow-y:auto;
@@ -88,7 +90,7 @@
        text-decoration:none;
       }
       .requ:hover{
-        background-color:#dad8d8;
+        background-color:#f0e3e3;
       }
 
     </style>
