--- a/templates/userfriends.html
+++ b/templates/userfriends.html
@@ -34,7 +34,7 @@
        text-decoration:none;
       }
       .requ:hover{
-        background-color:#dad8d8;
+        background-color:#f0e3e3;
       }
       .requ{
           margin-left:auto;
@@ -49,7 +49,8 @@
           border-radius:5px;
           margin-top:2px;
           margin-bottom:2px;
-
+          transition-property:all;
+          transition:.1s ease;
         }
          .det{
         margin:10px;
