--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -69,7 +69,7 @@ font-weight:bolder;
 }
 
 #user_name{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'sui-semi-bold';
   text-transform:capitalize;
   font-weight:bolder;
 }
