--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,85 @@
     #logo{
       font-family: 'Lobster Two',cursive, italic;
          font-weight:bold;
-
+    }
+    @media screen and (max-width:1180px){
+       #side{
+         display:none;
+       }
+       .whole{
+         width:80vw;
+         justify-content:center;
+       }
+    }
+     @media screen and (max-width:700px){
+       .whole{
+         transform:scale(.9);
+       }
+       .igroup{
+          transform:scale(.9);
+       }
+       .logo{
+         transform:scale(.9);
+       }
+    }
+    .head{
+      z-index:999;
     }
 </style>
+<style>
+        @font-face {
+            font-family: sui-light;
+            src:
+                local("Segoe UI Light"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff2) format("woff2"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff) format("woff"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.ttf) format("truetype");
+            font-weight: 100;
+        }
+
+        @font-face {
+            font-family: sui-semi-light;
+            src:
+                local("Segoe UI Semilight"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.woff2) format("woff2"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.woff) format("woff"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.ttf) format("truetype");
+            font-weight: 200;
+        }
+
+        @font-face {
+            font-family: sui;
+            src:
+                local("Segoe UI"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format("woff2"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff) format("woff"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format("truetype");
+            font-weight: 400;
+        }
+
+        @font-face {
+            font-family: sui-bold;
+            src:
+                local("Segoe UI Bold"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2) format("woff2"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff) format("woff"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.ttf) format("truetype");
+            font-weight: 600;
+        }
+
+        @font-face {
+            font-family: sui-semi-bold;
+            src:
+                local("Segoe UI Semibold"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2) format("woff2"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff) format("woff"),
+                url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf) format("truetype");
+            font-weight: 700;
+        }
+    </style>
+
 <header class="head">
-    <div >
+    <div>
         <a href="/" id="logo">
         Matrix
             </a>
@@ -67,7 +141,7 @@
         {% block posts %}
          {% endblock %}
     </div>
-    <div>
+    <div id="side">
         {% block side %}
          {% endblock %}
     </div>
