--- a/templates/post2.html
+++ b/templates/post2.html
@@ -1,4 +1,4 @@
-      <style>
+ <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto&display=swap');
 
         .bod{
@@ -88,15 +88,19 @@
           margin:10px 20px;
           height:50px;
           width:70%;
-          border-radius:5px;
-          border:.3px solid #dad8d8;
+          border:none;
+          border-bottom:.5px solid #dad8d8;
           outline:none;
+        }
+        #cap:focus{
+        border-bottom:.5px solid #000;
         }
         #pos{
          margin:20px 20px;
          color:blue;
          font-size:20px;
          cursor:pointer;
+         font-family:'sui-semi-bold';
         }
         #dpcon{
           width:40vw;
@@ -172,7 +176,7 @@
         .post_i{
           width:80%;
           height:70%;
-          border-radius:10px;
+          border-radius:1px;
           overflow:hidden;
           border:.1px solid #dad8d8;
           display:flex;
@@ -186,7 +190,7 @@
 
 
 </style>
-  <style>
+ <style>
              @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto&display=swap');
         .container{
           width:70vw;
@@ -225,6 +229,7 @@
           justify-content:space-between;
           align-items:center;
           padding-left:15px;
+          width:100%;
         }
         .uc_o{
           height:60px;
@@ -249,11 +254,11 @@
           width:40px;
           height:40px;
           margin:20px;
-          float:right;
-           display:flex;
+          display:flex;
           flex-direction:row;
           align-items:center;
           margin-top:30px;
+          position:relative;
         }
         .ubcon{
           width:100%;
@@ -267,18 +272,14 @@
         }
         .uk{
           margin-top:10px;
-          margin-left:20px;
-          font-size:17px;
-          font-family: 'Poppins', sans-serif;
-        }
-        .captio{
-          word-wrap:break-word;
-          margin:10px;
-        }
-        #post_caption{
+          padding-left:20px;
           font-size:17px;
           font-family: 'Poppins', sans-serif;
           border-bottom:.1px solid #dad8d8;
+        }
+        .captio{
+          word-wrap:break-word;
+          margin-left:10px;
         }
         .rbkc{
           border:0.1px solid grey;
@@ -288,12 +289,51 @@
           font-weight:bold;
           color:#000000;
           width:auto;
-          padding-left:5px;
-          padding-right:5px;
           margin:5px;
           cursor:pointer;
+          text-align:center;
         }
     </style>
+ <style>
+  .o_con > div{
+     display:flex;
+     flex-direction:row;
+     padding:5px;
+     border-bottom:.1px solid #dad8d8;
+  }
+   .o_con > div > span{
+     display:flex;
+     flex-direction:column;
+     margin-left:15px;
+     width:70%;
+  }
+   .o_con > div > span >a{
+     font-size:16px;
+     font-family:'sui-semi-bold';
+  }
+  .o_con > div > span > span{
+     font-size:14px;
+     font-family:'sui-light';
+     margin-left:15px;
+     word-break:break-word;
+     height:auto;
+  }
+  .o_con > div > div{
+     height:50px;
+     width:50px;
+     border-radius:50%;
+  }
+  .o_con > div > div >img{
+     height:100%;
+     width:100%;
+  }
+  .o_con::-webkit-scrollbar{
+          width:0px;
+   }
+   .ubcon::-webkit-scrollbar{
+          width:0px;
+   }
+ </style>
 <div class="bod" id="pc">
       <div class="container" id="con1">
            <div class="prog" id="pr1"></div>
@@ -319,10 +359,26 @@
                </div>
               <div class="ubcon">
                   <div class="capic">
-                      <input type="hidden" id="postid">
-<!--                     <span class="uk">{{user.name}}</span>-->
-                      <div class="captio" id="post_caption">
-
+                     <input type="hidden" id="postid" >
+<!--                     <span class="uk" style="display:flex;flex-direction:row; padding:0px;">-->
+<!--                         <span  style="font-size:16px;font-family:'sui-semi-bold';">{{user.name}}</span>-->
+<!--                         <span class="captio" id="post_caption"  style="font-size:16px;font-family:'sui-light';"></span>-->
+<!--                     </span>-->
+                      <div class="o_con" id="comusk">
+                        <div>
+                            <div>
+                             {% if dpfound %}
+                                       <img src="{{dp.content}}" height="100%" width="100%">
+                             {% endif %}
+                             {% if not dpfound %}
+                                       <img src="https://instagram.fdel12-1.fna.fbcdn.net/v/t51.2885-19/44884218_345707102882519_2446069589734326272_n.jpg?_nc_ht=instagram.fdel12-1.fna.fbcdn.net&_nc_ohc=0CE398PqtLwAX9XWgt3&oh=b03f38f512349bed45a72c144cd6720d&oe=6077A18F&ig_cache_key=YW5vbnltb3VzX3Byb2ZpbGVfcGlj.2" height="100%" width="100%">
+                              {% endif %}
+                           </div>
+                           <span>
+                             <a>{{user.username}}</a>
+                             <span id="post_caption"></span>
+                           </span>
+                         </div>
                       </div>
                   </div>
               </div>
@@ -339,7 +395,7 @@
            <form action="/post" method="post" id="pform" autocomplete="off">
                {% csrf_token %}
              <div class="post_i" id="nps" onclick="upload()">
-                 <div id="ct">Upload Image</div>
+                 <div id="ct">Add Image</div>
                  <img width="100%" height="100%" alt="" src="" id="pimg" style="display:none">
                  <input type="file" style="display:none" id="finp" onchange="selected()">
                  <input type="hidden" value="{{user.username}}" id="username" name="user">
